assets/css/style.css
@import url('https://fonts.googleapis.com/css2?family=Roboto:wght@300;400&display=swap');

html {
    margin: 0px;
    height: 100%;
    width: 100%;
}

body {
    font-family: 'Roboto', sans-serif;
    font-size: medium;
    background-color: #FFFFFF;
    color: #112D4E;
    margin: 0px;
    min-height: 100%;
    width: 100%;
    display: flex;
    flex-direction: column;
}

header {
    display: flex;
    align-items: baseline;
    border-bottom: solid 3px #676785;
    background-color: #f2eeee;
    width: 100%;
}

.title {
    padding: 4px 2px 2px 2px;
    text-transform: capitalize;
    text-align: left;
    margin-left: 2%;
    color: #112D4E;
}


.title-intro {
    font-size: 80%;
    margin-left: auto;
}

.title-intro-icons {
    display: none;
}

.title-text {
    font-size: 80%;
    display: inline-block;
}

.navigation {
    color: #112D4E;
    font-weight: 600;
    margin-left: auto;
    text-transform: uppercase;
    margin-right: 1rem;
}

.navigation ul {
    list-style-type: none;
}

.navigation-link {
    text-decoration: none;
}

.navigation-link-active {
    text-decoration: underline;
}

.navigation li {
    display: inline-block;
    font-size: 90%;
    margin-left: 10px;
    margin-right: 10px;
}

.navigation li a {
    font-weight: 600;
    color: #112D4E;
}

.about {
    margin: 0 1rem;
    padding: 1px;
    background-color: #FFFFFF;
}

.intro {
    font-size: 110%;
    font-weight: 600;
    color: #0F0F0D;
    margin-top: 20px;
    display: flex;
}

.bookclub {
    text-align: center;
    position: absolute;
    margin-left: 50px;
    color: #0F0F0D;
}

.bookclub-text {
    text-align: left;
    font-weight: 500;
    font-size: 100%;
    margin: auto;
}

.intro img {
    width: 80%;
    height: 80%;
}

.testimonials {
    text-align: center;
}

.container {
    display: flex;
    align-items: center;
    margin: 1rem;
}

/* the card has CSS code that was taken from W3 schools */
.card {
    box-shadow: -1px -1px 10px 4px #464646;
    transition: 0.3s;
    border-radius: 6px;
    background-color: #DFE8F0;
    text-align: center;
    padding: 15px;
    margin: 1%;
}

footer {
    border-top: solid 3px #676785;
    background-color: #f2eeee;
}

.links {
    display: flex;
    justify-content: center;
    align-items: center;
    width: 100%;
    height: 50px;
    overflow: hidden;
    margin-top: auto;
}

.links h3 {
    text-align: center;
    padding: 5px;
    font-size: 130%;
    color: #112D4E;
}

.links i {
    font-weight: 600;
    font-size: 150%;
    text-align: center;
    margin-left: 20px;
    color: #112D4E;
}

.icons {
    display: flex;
    text-align: center;
    align-items: center;
    padding: 5px;
    color: #112D4E;
}

/* Here begins styling for the second page */

.read {
    text-align: center;
    margin: 10px;
    padding: 1px 10px 20px 5px;
}

.text-center {
    text-align: center;
    font-size: 110%;
    font-weight: 400;
    margin-bottom: 10px;
}

.books {
    display: block;
    white-space: normal;
    text-align: center;
}

.books ul {
    list-style: none;
    padding-inline-start: 0;
}

.readinglist {
    display: inline-block;
    text-align: center;
}

.books li {
    border: #676785 solid 2px;
    margin-left: 2px;
    margin-bottom: 3px;
}

.books img {
    width: 200px;
    height: 300px;
    display: inline-block;
}

.books p {
    text-align: center;
    font-weight: 600;
    color: #0F0F0D;
    text-decoration: underline;
}

.signup {
    text-align: center;
    font-size: 120%;
    color: #DBE2EF;
    background-color: #4a79b2;
    padding: 1%;
}

.signup h2 {
    color: #DBE2EF;
}

.input-text {
    padding: 10px;
    margin-bottom: 20px;
}

.input-email {
    padding: 10px;
    margin-bottom: 20px;
}

.input-submit {
    padding: 3px 5px 4px 5px;
    font-size: 90%;
    text-transform: uppercase;
    color: #112D4E;
}

.meeting {
    background-color: #f2eeee;
    margin-bottom: 20px;
    padding: 5px 10px;
    display: flex;
    font-size: 100%;
}

.meeting h2 {
    text-align: center;
}

.meeting p {
    font-weight: 500;
    text-align: left;
}

.map {
    border: solid 3px #FFFFFF;
    margin-left: auto;
    width: 50%;
}

.text-contact {
    text-align: center;
    font-size: 110%;
    font-weight: 600;
    color: #0F0F0D;
}

/*styling for header in confirmation.html*/
.response {
    font-size: 100%;
    text-align: center;
    font-weight: 600;
    color: #112D4E;
}

/* screens width 1200px and smaller */
@media screen and (max-width: 1200px) {

    header {
        display: block;
    }

    .title {
        margin-top: 1%;
    }

    .title-intro {
        display: block;
        text-align: center;
    }

    .title-intro-icons {
        display: none;
    }

    .title-text {
        display: block;
        text-align: center;
    }

    .bookclub-text {
        text-align: center;
        margin: 3%;
    }

    .bookclub {
        text-align: center;
        position: relative;
        margin-left: 0;
        color: #112D4E;
    }

    .intro {
        display: block;
    }

    .intro img {
        width: 100%;
        height: 100%;
    }

    .container {
        display: block;

    }

    .card {
        margin-bottom: 10px;
    }

    .signup {
        text-align: left;
        padding-left: 8px;
    }

    .navigation {
        text-align: center;
    }

    .meeting {
        display: block;
    }

    .map {
        margin: auto;
        width: 100%;
    }

    .input-text {
        margin-right: 100px;
    }

    footer {
        bottom: 0%;
    }

    .links {
        position: relative;
    }

    .links h3 {
        display: none;
        visibility: hidden;
        text-align: center;
        padding: 5px;
        font-size: 120%;
        color: #112D4E;
    }

    .text-contact {
        margin: 1%;
    }
}

/* screens width 600px and smaller */
@media screen and (max-width: 600px) {

    header {
        display: flex;
    }

    .title {
        margin-top: 0%;
        margin-bottom: 0%;
    }

    .title-intro-icons {
        display: inline-block;
        text-align: center;
    }

    .title-intro {
        display: none;
    }

    .title-text {
        display: none;
    }

    .navigation {
        text-align: center;
    }

    .navigation li a {
        font-weight: 700;
        color: #112D4E;
    }

    .bookclub-text {
        text-align: center;
        margin: 3%;
    }

    .bookclub {
        text-align: center;
        position: relative;
        margin-left: 0px;
        color: #112D4E;
    }

    .intro {
        display: block;
    }

    .intro img {
        width: 100%;
        height: 100%;
    }

    .container {
        display: block;
        margin-right: 20px;
        margin-left: 20px;
    }

    .card {
        margin-bottom: 10px;
    }

    .signup {
        text-align: left;
        padding-left: 8px;
    }

    .meeting {
        display: block;
    }

    .map {
        margin: auto;
        width: 100%;
    }

    .input-text {
        margin-right: 100px;
    }

    footer {
        bottom: 0%;
    }

    .links h3 {
        display: none;
        visibility: hidden;
        text-align: center;
        padding: 5px;
        font-size: 120%;
        color: #112D4E;
    }

    .text-contact {
        margin: 1%;
    }
}

@media screen and (max-width: 400px) {

    .title-intro-icons {
        display: flex;
        margin-top: 1%;
        text-align: center;
    }

    .navigation {
        display: block;
        margin-right: 0;
        font-size: 80%;
    }

    .navigation ul {
        padding-left: 0;
    }

    .signup form {
        width: 200px;
    }
}

